--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>NOVA TORNO LLC v1 </title>
+	<title>NOVA TORNO LLC </title>
 	<meta name="description" content="Justin - Personal Portfolio" />
 	<meta name="keywords" content="blog, business card, creative, creative portfolio, cv theme, online resume, personal, portfolio, professional cv, responsive portfolio, resume, resume theme, vcard" />
 	<meta name="author" content="beingeorge" />
@@ -99,7 +99,7 @@ Andres is currently working towards his Masters in Information Technology and Ma
 					</div>
 
 					<div class="col-md-5 d-none d-md-block">
-						<img class="img-fluid img-thumbnail" src="assets/images/profile2.png" alt="About Picture">
+						<img class="img-fluid img-thumbnail" src="assets/images/cover.png" alt="About Picture">
 					</div>
 
 				</div>
